--- a/Untitled5.ipynb
+++ b/Untitled5.ipynb
@@ -2,16 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "935a8949-7976-48b3-90cb-90aa2aa0772d",
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m<tokenize>:6\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(ch,end=\" \")\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unindent does not match any outer indentation level\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a a a a a a a a a a  \n"
      ]
     }
    ],
@@ -20,24 +19,23 @@
     "num=97\n",
     "for i in range(1,5):\n",
     "     for j in range(1,i+1,1):\n",
-    "         ch=chr(num)\n",
-    "      print(ch,end=\" \")\n",
-    "      n+=1\n",
-    "     print(\" \")"
+    "        ch=chr(num)\n",
+    "        print(ch,end=\" \")\n",
+    "        n = num \n",
+    "print(\" \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "id": "30be09e7-98b1-4f8d-8ee3-232e6fe22544",
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block after 'for' statement on line 3 (1330220229.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[31], line 4\u001b[1;36m\u001b[0m\n\u001b[1;33m    ch = chr(n)\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block after 'for' statement on line 3\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A B C D E F G H I J  \n"
      ]
     }
    ],
@@ -45,9 +43,9 @@
     "n=65\n",
     "for i in range(1,5):\n",
     "    for j in range(1, i+1,1):\n",
-    "ch = chr(n)\n",
-    "    print(ch, end=\" \")\n",
-    "    num = num + 1\n",
+    "        ch = chr(n)\n",
+    "        print(ch, end=\" \")\n",
+    "        n = n+ 1\n",
     "\t\n",
     "print(\" \")\n"
    ]
